Fixed navigation on scroll
Updated all the views since the size of the navigation was updated. Some
javascript was also added to the navigation component to track the
user's scroll position. This allows the scrolled navigation to show up
only when the fixed nav is out of view.

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -1,19 +1,17 @@
 .nav {
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
-  padding-top: 15px;
+  margin: auto;
 }
 
 .nav-left {
   float: left;
-  padding-left: 1rem;
+  padding: 8px 0 8px 16px;
 }
 
 .nav-right {
   float: right;
-  padding-right: 1rem;
-  padding-top: 5px;
+  padding: 18px 16px 0 0;
 }
 
 .nav-right ul {
@@ -77,6 +75,17 @@
 
 .active { color: #ffc933; }
 
+.scrolled-nav-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  background-color: #cad8eb;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+
 .mobile-nav {
   display: none;
   width: 100%;
@@ -133,4 +142,5 @@
 @media (max-width: 980px) {
   .nav { display: none; }
   .mobile-nav { display: block; }
+  .scrolled-nav-container { display: none; }
 }
