--- a/src/app/layouts/public/download/download.component.scss
+++ b/src/app/layouts/public/download/download.component.scss
@@ -7,10 +7,9 @@
     text-align: center;
     font-size: 28px;
     font-weight: 500;
-    text-align: center;
     color: #ffffff;
     margin: 45px auto 0;
-    padding-bottom: 81px;
+    padding-bottom: 96px;
   }
 }
 
