--- a/src/app/layouts/public/home/home.component.scss
+++ b/src/app/layouts/public/home/home.component.scss
@@ -12,7 +12,7 @@
     color: #ffffff;
     margin: 45px auto 0;
   }
-  .carousel { height: 222px; }
+  .carousel { height: 273px; }
 }
 
 .cta-container { position: relative; }
