--- a/src/app/layouts/public/join/join.component.scss
+++ b/src/app/layouts/public/join/join.component.scss
@@ -10,7 +10,7 @@
     text-align: center;
     color: #ffffff;
     margin: 45px auto 0;
-    padding-bottom: 81px;
+    padding-bottom: 96px;
   }
 }
 
