--- a/src/app/layouts/public/login/login.component.scss
+++ b/src/app/layouts/public/login/login.component.scss
@@ -6,7 +6,7 @@
     position: relative;
     top: -18px;
     width: 1200px;
-    height: 243px;
+    height: 242px;
     background: url('/assets/header__image--login.png') center no-repeat;
     margin: auto;
   }
