--- a/src/app/layouts/public/reset/reset.component.scss
+++ b/src/app/layouts/public/reset/reset.component.scss
@@ -9,7 +9,7 @@
     text-align: center;
     color: #fff;
     margin: 45px auto 0;
-    padding-bottom: 198px;
+    padding-bottom: 197px;
   }
 }
 
