--- a/src/app/layouts/public/signup/signup.component.scss
+++ b/src/app/layouts/public/signup/signup.component.scss
@@ -4,9 +4,9 @@
 
   .masthead-image {
     width: 1200px;
-    height: 243px;
+    height: 230px;
     background: url('/assets/header__image--create-account.png') center no-repeat;
-    margin: auto;
+    margin: 12px auto 0;
   }
 
   .masthead-header {
